<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:hint="@string/txt1"
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="111dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <EditText
        android:hint="@string/txt2"
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="621dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        />

    <Button
        android:onClick="MiletoKM"
        android:hint="@string/btn1"
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:text="@string/mile_to_km"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="256dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:onClick="KMtoMile"
        android:hint="@string/btn2"
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:text="@string/km_to_mile"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="256dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="250dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:onClick="inchtocm"
        android:hint="@string/bnt3"
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:text="@string/inches_to_cm"
        tools:layout_editor_absoluteX="293dp"
        tools:layout_editor_absoluteY="256dp"
        android:layout_marginTop="150dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="150dp"
        />

    <Button
        android:onClick="cmtoinch"
        android:hint="@string/btn4"
        android:id="@+id/button4"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:text="@string/cm_to_inches"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="355dp"
        android:layout_marginTop="250dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="150dp"/>

    <Button
        android:onClick="kgtopound"
        android:hint="@string/btn5"
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/kg_to_pound"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="355dp"
        android:layout_marginTop="150dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="300dp"/>

    <Button
        android:onClick="poundtokg"
        android:hint="@string/btn6"
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/pound_to_kg"
        tools:layout_editor_absoluteX="293dp"
        tools:layout_editor_absoluteY="355dp"
        android:layout_marginTop="250dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="300dp"/>

    <Button
        android:onClick="Clear"
        android:hint="@string/btn7"
        android:id="@+id/button7"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:text="@string/clear"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="479dp"
        android:layout_above="@id/editText4"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="70dp"

        />
</RelativeLayout>